<resources>
    <string name="app_name">Roll Time</string>
    <string name="title_activity_record_match">Record Match</string>

    <!--Menu Actions-->
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!--Details Category-->
    <string name="category_opponent">Opponent</string>
    <string name="hint_opponent_name">Name</string>
    <string name="category_belt">Belt</string>
    <string name="category_your">Your</string>
    <string name="category_submissions">Submissions</string>

    <!--Submission types-->
    <string name="choke">Chokes</string>
    <string name="armlock">Armlocks</string>
    <string name="leglock">Leglocks</string>

    <string name="edit_activity_title_new_match">Add a Match</string>
    <string name="edit_activity_title_edit_match">Edit Match</string>

    <!--Bottom nav menu-->
    <string name="text_home">Home</string>
    <string name="text_stats">Stats</string>
    <string name="text_timer">Timer</string>
    <string name="text_videos">Videos</string>

    <!--Timer-->
    <string name="hint_minutes">Minutes</string>
    <string name="message_minutes">Please Enter Minutes</string>
    <string name="default_hint">1</string>
    <string name="default_time">00:01:00</string>

    <!--Settings -->
    <string name="belt_level_label">Belt Level</string>
    <string name="belt_level_key" translatable="false">belt_level</string>
    <string name="pref_belt_label_white">White</string>
    <string name="pref_belt_label_blue">Blue</string>
    <string name="pref_belt_label_purple">Purple</string>
    <string name="pref_belt_label_brown">Brown</string>
    <string name="pref_belt_label_black">Black</string>

    <!--Shared Preferences -->
    <string name="pref_belt_white" translatable="false">0</string>
    <string name="pref_belt_blue" translatable="false">1</string>
    <string name="pref_belt_purple" translatable="false">2</string>
    <string name="pref_belt_brown" translatable="false">3</string>
    <string name="pref_belt_black" translatable="false">4</string>

    <!-- Dialog message to ask the user to confirm deleting [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this match?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <!--Summary Category-->
    <string name="you">You</string>
    <string name="versus">vs.</string>

    <!--Accessibility-->
    <string name="reset_timer">Reset Timer</string>
    <string name="start_stop">Start and Stop Button</string>
    <string name="user_belt_level">User belt level</string>
    <string name="opp_belt_level">Opponent belt level</string>
    <string name="belt_level_colors">Belt level colors</string>
    <string name="video_thumbnail">This is a thumbnail of the video</string>
    <string name="fab_accessibility">This will take you to the Edit Match page</string>
    <string name="increase_user_chokes">Increase user chokes</string>
    <string name="decrease_user_chokes">Decrease user chokes</string>
    <string name="increase_user_armlocks">Increase user armlocks</string>
    <string name="decrease_user_armlocks">Decrease user armlocks</string>
    <string name="increase_user_leglocks">Increase user leglocks</string>
    <string name="decrease_user_leglocks">Decrease user leglocks</string>
    <string name="increase_opp_chokes">Increase opponent chokes</string>
    <string name="decrease_opp_chokes">Decrease opponent chokes</string>
    <string name="increase_opp_armlocks">Increase opponent armlocks</string>
    <string name="decrease_opp_armlocks">Decrease opponent armlocks</string>
    <string name="increase_opp_leglocks">Increase opponent leglocks</string>
    <string name="decrease_opp_leglocks">Decrease opponent leglocks</string>
    <!--Youtube Base URL-->
    <string name="youtube_base_url">https://www.googleapis.com/youtube/v3/</string>

    <!--Sign in strings-->
    <string name="signed_in">Signed in!</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>

    <!--Button values-->
    <string name="button_increase">+</string>
    <string name="button_decrease">-</string>
    <string name="default_quantity_value">0</string>

    <!--Facebook login-->
    <string name="facebook_application_id" translatable="false">129706411072508</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb129706411072508</string>
    100dp
    <string name="empty_view_title_text">Enter your matches to get started…</string>

    <!--Bar Chart-->
    <string name="no_chart_data">No chart data available</string>

</resources>
