<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/text_home" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_history_white_24dp"
        android:title="@string/text_history" />
    <item
        android:id="@+id/action_timer"
        android:enabled="true"
        android:icon="@drawable/ic_av_timer_white_24dp"
        android:title="@string/text_timer" />
    <item
        android:id="@+id/action_videos"
        android:enabled="true"
        android:icon="@drawable/ic_video_library_white_24dp"
        android:title="@string/text_videos" />
</menu>