<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:descendantFocusability="blocksDescendants"
    android:elevation="3dp"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground"
    app:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/you_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/you"
                android:textColor="@android:color/black"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/user_belt_level"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/user_belt_level"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/user_choke_count"
                style="@style/SubmissionTextViewStyle"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/user_armlock_count"
                style="@style/SubmissionTextViewStyle"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/user_leglock_count"
                style="@style/SubmissionTextViewStyle"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/versus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/versus" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/opponent_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/opponent_belt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/opp_belt_level"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/opp_choke_count"
                style="@style/SubmissionTextViewStyle"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/opp_armlock_count"
                style="@style/SubmissionTextViewStyle"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/opp_leglock_count"
                style="@style/SubmissionTextViewStyle"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>