<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.noahkim.rolltime.ui.fragment.TimerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <ProgressBar
            android:id="@+id/progressBarCircle"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_centerInParent="true"
            android:background="@drawable/drawable_circle_dark_blue"
            android:indeterminate="false"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/drawable_circle_yellow"
            android:rotation="-90" />

        <EditText
            android:id="@+id/editTextMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textViewTime"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/hint_minutes"
            android:inputType="number"
            android:maxLength="15"
            android:maxLines="1"
            android:minEms="5"
            android:text="@string/default_hint"
            android:textColor="@color/colorYellow"
            android:textColorHint="@color/colorYellow" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/default_time"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageViewReset"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/textViewTime"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/icon_reset"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageViewStartStop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/progressBarCircle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/icon_start" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>