<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context="com.noahkim.rolltime.ui.activity.EditMatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Opponent name category-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_opponent" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingStart="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_opponent_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_opponent_name"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <!-- Belt category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_belt" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Belt spinner -->
                <Spinner
                    android:id="@+id/belts_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>

        <!--Your Submissions category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="horizontal">

            <!-- Label -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:text="@string/category_your" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:text="@string/category_submissions"
                    android:paddingTop="0dp"/>

            </LinearLayout>

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingStart="4dp">

                <!-- User choke field -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_choke_label"
                        style="@style/SubmissionLabelStyle"
                        android:text="@string/choke"/>

                    <Button
                        android:id="@+id/user_choke_decrease_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_decrease" />

                    <TextView
                        android:id="@+id/user_choke_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/default_quantity_value"/>

                    <Button
                        android:id="@+id/user_choke_increase_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_increase" />

                </LinearLayout>

                <!-- User armlock field -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_armlock_label"
                        style="@style/SubmissionLabelStyle"
                        android:text="@string/armlock"/>

                    <Button
                        android:id="@+id/user_armlock_decrease_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_decrease" />

                    <TextView
                        android:id="@+id/user_armlock_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/default_quantity_value"/>

                    <Button
                        android:id="@+id/user_armlock_increase_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_increase" />

                </LinearLayout>

                <!-- User leglock field -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/user_leglock_label"
                        style="@style/SubmissionLabelStyle"
                        android:text="@string/leglock"/>

                    <Button
                        android:id="@+id/user_leglock_decrease_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_decrease" />

                    <TextView
                        android:id="@+id/user_leglock_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/default_quantity_value"/>

                    <Button
                        android:id="@+id/user_leglock_increase_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_increase" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- Opponent Submissions category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="24dp">

            <!-- Label -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:text="@string/category_opponent" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:paddingTop="0dp"
                    android:text="@string/category_submissions" />

            </LinearLayout>

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingStart="4dp">

                <!-- Opponent choke field -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/opp_choke_label"
                        style="@style/SubmissionLabelStyle"
                        android:text="@string/choke" />

                    <Button
                        android:id="@+id/opp_choke_decrease_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_decrease" />

                    <TextView
                        android:id="@+id/opp_choke_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/default_quantity_value" />

                    <Button
                        android:id="@+id/opp_choke_increase_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_increase" />

                </LinearLayout>

                <!-- Opponent armlock field -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/opp_armlock_label"
                        style="@style/SubmissionLabelStyle"
                        android:text="@string/armlock" />

                    <Button
                        android:id="@+id/opp_armlock_decrease_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_decrease" />

                    <TextView
                        android:id="@+id/opp_armlock_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/default_quantity_value" />

                    <Button
                        android:id="@+id/opp_armlock_increase_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_increase" />

                </LinearLayout>

                <!-- Opponent leglock field -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/opp_leglock_label"
                        style="@style/SubmissionLabelStyle"
                        android:text="@string/leglock" />

                    <Button
                        android:id="@+id/opp_leglock_decrease_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_decrease" />

                    <TextView
                        android:id="@+id/opp_leglock_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="8dp"
                        android:text="@string/default_quantity_value" />

                    <Button
                        android:id="@+id/opp_leglock_increase_button"
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:text="@string/button_increase" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>